# mediapipe-sword-sign

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  collect_data.py  gesture_data.csv  gesture_model.pkl  main.py  predict.py  pyproject.toml  requirements.txt  train_model.py
apps/: browser_camera_hub_viewer.html  camera_hub_gui.py  collect_room_light_data.py  extract_debug_frames.py  gesture_monitor_gui.py  measure_browser_overlay_latency.py  publish_udp.py  serve_browser_monitor.py  serve_camera_hub.py  serve_websocket.py  settings_gui.py  train_room_light_model.py
configs/mediamtx/: mediamtx.publisher.example.yml  mediamtx.windows.example.yml
docs/: browser_gui_integration.md  integration-contract.md  mediamtx_integration.md  module-responsibilities.md  retired-paths.md
docs/archive/: README.md
examples/: sword_push_to_talk_sample.py
mediapipe_sword_sign/: __init__.py  detector.py  features.py  model_loader.py  payloads.py  ports.py  room_light.py  temporal.py  topics.py  types.py
mediapipe_sword_sign/adapters/: __init__.py  (+2 more)
scripts/: camera_hub_stack.py  start_camera_hub_stack.bat
tests/: test_adapters.py  test_camera_hub_gui.py  test_camera_hub_stack.py  test_detector.py  test_extract_debug_frames.py  test_features.py  test_measure_browser_overlay_latency.py  test_model_loader.py  test_payloads.py  test_publish_udp.py  test_room_light.py  test_serve_browser_monitor.py  test_serve_camera_hub.py  test_serve_websocket.py  test_static_debug_fixtures.py  test_temporal.py  test_topics.py  test_types.py  test_worker2_organ_module_contracts.py
(+2 files in other folders)
