[project]
name = "mediapipe-sword-sign"
version = "0.1.0"
description = "MediaPipe-based sword sign gesture recognition module"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib==1.5.3",
    "mediapipe==0.10.14",
    "opencv-python==4.13.0.92",
    "pandas==3.0.2",
    "scikit-learn==1.8.0",
    "websockets==16.0",
]

[tool.uv]
cache-dir = ".uv-cache"

